# MouseCross

./: .gitignore  APP_STORE_SUBMISSION_GUIDE.md  CLAUDE.md  CMakeLists.txt  Info.plist.in  LGPL_REBUILD_GUIDE.md  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_LICENSES.txt  WORDPRESS_LGPL_GUIDE.html  create_icon.py  create_simple_icon.py  wordpress-content.md
.claude/: settings.local.json
deployment/: README.md  build_all.bat  deploy_all_windows.bat  run_deploy.ps1
deployment/macos/: .gitignore  APP_STORE_SUBMISSION_README.md  CERTIFICATE_SETUP_GUIDE.md  appstore_api_helper.py  build_all.sh  build_app.sh  build_app_improved.sh  build_appstore.sh  build_github_release.sh  create_csrs.sh  create_dmg_background.py  create_provisioning_profile.sh  diagnose_certificates.sh  fix_certificates.sh  install_certificates.sh  prepare_appstore.sh  register_app_complete.sh  setup_appstore.sh  submit_appstore.sh  upload_appstore.sh
deployment/windows/: MouseCross.wxs  MouseCross_ARM64.wxs  MouseCross_Complete.wxs  MouseCross_Professional.wxs  MouseCross_Professional_v4.wxs  Package.appxmanifest  build_msi.bat  build_msix.bat  build_portable.bat  build_simple.bat  deploy_qt_arm64.bat  license.rtf
resources/: MouseCross.rc  resources.qrc
resources/windows/: app.rc
scripts/: generate_icons.py  generate_icons_from_svg.py  generate_icons_python.py
src/: AboutDialog.cpp  AboutDialog.h  AutoStart.cpp  AutoStart.h  CrosshairOverlay.cpp  CrosshairOverlay.h  CrosshairRenderer.cpp  CrosshairRenderer.h  MacOSCrosshairRenderer.h  MacOSCrosshairRenderer.mm  MouseCrossApp.cpp  MouseCrossApp.h  SettingsDialog.cpp  SettingsDialog.h  SettingsManager.cpp  SettingsManager.h  WelcomeDialog.cpp  WelcomeDialog.h  WindowsCrosshairRenderer.cpp  WindowsCrosshairRenderer.h  main.cpp  static_plugins.cpp
translations/: mousecross_de.ts
